recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:2: error: not found: value lenght
  var y = lenght*2
          ^